--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,6 @@
     "import/extensions": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "import/prefer-default-export": 0,
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["**/*.spec.ts", "**/*.spec.tsx"]}]
+    "import/no-extraneous-dependencies": 0
   }
 }
